tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@duplicate_kwarg.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/duplicate_kwarg.txt
---
error: Keyword argument `end` is defined more than once
 --> duplicate_kwarg.txt:1:17
  |
1 | {{ range(end=5, end=3) }}
  |                 ^^^

note: first defined here duplicate_kwarg.txt:1:10
  |
1 | {{ range(end=5, end=3) }}
  |          ^^^
